# giant-snes-gamepad

./: .gitmodules  README.md
cad/: Base.idw  Base.ipt  Base_Left.ipt  Base_Right.ipt  Circle_Cell.iam  Circle_Copper.ipt  Circle_Velostat.ipt  Foam_Left.ipt  Foam_Right.ipt  Gamepad_Cart.iam  Gamepad_Left.iam  Gamepad_Right.iam  Giant-Snes-Gamepad.iam  Giant_Snes_Gamepad-Sheet.dwf  Giant_Snes_Gamepad.dwg  Giant_Snes_Gamepad.iam  Link.ipt  Square_Cell.iam  Square_Copper.ipt  Square_Velostat.ipt  Start_Cell.iam  Start_Copper.ipt  Start_Velostat.ipt  Trigger_Cell.iam  Trigger_Copper.ipt  Trigger_Velostat.ipt  first_sketch.fcstd
cad/Cart/: Bottom_Wheel_Supp.ipt  Cart.iam  Cart.idw  Docu.idw  Separator.ipt  Tower.ipt  Tower_Out.ipt  Transverse_Bottom.ipt  Transverse_High.ipt
cad/eagle/: .gitignore  controller.brd  controller.lbr  controller.sch
common/: communication.c  communication.h
firmware/: CMakeLists.txt  NOTES.md
firmware/src/: CMakeLists.txt  Descriptor.c  Descriptor.h  GSG.c  GSG.h  Gamepad.c  Gamepad.h  LUFAConfig.h  Systime.c  Systime.h  USB.c  USB.h  blink.cpp  main.c
gsg-driver/: .gitignore  gamepad.go  main.go
interface/: .gitignore  CMakeLists.txt
interface/src/: Application.cpp  Application.h  CMakeLists.txt  CellViewer.cpp  CellViewer.h  CellViewer.ui  Gamepad.cpp  Gamepad.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  common.cpp  common.h  main.cpp
